recipe_.css
.recipe_description {
	display: inline-block;
	margin-left: 40px;
	vertical-align: text-bottom;
}

.recipe_image_ingredients_wrapper {
	background-color: aliceblue;
	border-radius: 50px;
}

.recipe_img_large {
	width: 300px;
	height: 300px;
}

.recipe_img_round {
	border-radius: 50px;
}

.recipe_title {
	margin-bottom: 70px;
}

.ingredients_title {
	margin-bottom: 30px;
}


.recipe_instructions {
	margin-top: 30px;
	margin-bottom: 30px;
	border: solid red 2px;
	padding: 10px;
	border-radius: 20px;
}

.recipe_username {
	color: black;
	font-size: 20px;
	font-family: fantasy;
	font-weight: bold;
	padding-left: 20px;
}

h5.recipe_name {
	display: inline;
}

#rating_img {
	width: 100px;
	margin-top: 35px;
}

.review_counts {
	font-size: 15px;
	color: black;
	font-family: fantasy;
}

